--- a/style.css
+++ b/style.css
@@ -147,13 +147,19 @@ img{
 .btn{
     width: 150px;
     height: 40px;
-    margin-top: 20px;
     margin-left: 20px;
     border-radius: 5px;
     border: none;
     outline: none;
     color: #fff;
     background-color: orangered;
+}
+
+#box {
+    width: 50px;
+    height: 10px;
+    display: inline-block;
+    transform: translateX(63px);
 }
 
 .limit{
