--- a/style.css
+++ b/style.css
@@ -172,3 +172,30 @@ img{
     100%{color: red};
 }
 
+.card-design{
+    display: none;
+    width: 300px;
+    height: 300px;
+    background-color: orangered;
+    position: absolute;
+    margin-left: 41%;
+    margin-top: -6%;
+    border-radius: 5px;
+    z-index: 100;
+}
+
+.closeBtn{
+    padding: 5px;
+    float: right;
+    border: none;
+    margin-top: -33px;
+    margin-right: 10px;
+    color: #ffffff;
+    background-color: unset;
+}
+
+.card-design h1 {
+    color: white;
+    text-align: center;
+}
+
